refactor: 优化 tech 目录下的最佳实践文档
根据 Spec-Kit 和 OpenSpec 提示词规范优化文档结构：

前端文档优化：
- 01-html: HTML5 语义化和无障碍最佳实践
- 02-css: CSS3 响应式设计和架构规范
- 03-javascript: ES6+ 开发规范
- 04-typescript: 类型系统最佳实践
- 05-react: React 18+ Hooks 规范
- 06-vue: Vue 3 Composition API 规范
- 07-angular: Angular 17+ 独立组件规范

后端文档优化：
- 01-java: Java 17+ 核心开发规范
- 02-spring-boot: Spring Boot 3.x 规范
- 03-spring-cloud: 微服务架构规范
- 04-mybatis: MyBatis-Plus 持久层规范
- 05-mysql: MySQL 8.0 数据库规范
- 06-redis: Redis 缓存规范
- 07-rocketmq: RocketMQ 消息队列规范
- 08-kafka: Kafka 消息队列规范

文档结构统一为：
- 核心原则 (NON-NEGOTIABLE) 表格
- 提示词模板
- 决策指南（树形结构）
- 正反对比示例（✅/❌ 表格）
- 验证清单
- 护栏约束
- 常见问题诊断
- 输出格式要求

移除代码示例，改用结构化文本描述

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>